Fixed which button the popup displays on and changed alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,7 +107,7 @@ section {
 	display: none; // hidden by defaults
 	position: fixed;
 	top: 20px;
-	right: 20px;
+	left: 50%;
 	padding: 10px 20px;
 	background: #333;
 	color: white;
